@@ -8,9 +8,9 @@
 .*: +file format elf..-ia64-.*
 
 Contents of section .tdata:
- (60+)?1170 11000000 12000000 13000000 14000000  .*
- (60+)?1180 15000000 16000000 17000000 18000000  .*
- (60+)?1190 41000000 42000000 43000000 44000000  .*
- (60+)?11a0 45000000 46000000 47000000 48000000  .*
- (60+)?11b0 01010000 02010000 03010000 04010000  .*
- (60+)?11c0 05010000 06010000 07010000 08010000  .*
+ (60+)?1[0-9a-f]+ 11000000 12000000 13000000 14000000  .*
+ (60+)?1[0-9a-f]+ 15000000 16000000 17000000 18000000  .*
+ (60+)?1[0-9a-f]+ 41000000 42000000 43000000 44000000  .*
+ (60+)?1[0-9a-f]+ 45000000 46000000 47000000 48000000  .*
+ (60+)?1[0-9a-f]+ 01010000 02010000 03010000 04010000  .*
+ (60+)?1[0-9a-f]+ 05010000 06010000 07010000 08010000  .*
