@@ -8,9 +8,9 @@
 .*: +file format elf..-ia64-.*
 
 Contents of section .tdata:
- 11140 11000000 12000000 13000000 14000000  .*
- 11150 15000000 16000000 17000000 18000000  .*
- 11160 41000000 42000000 43000000 44000000  .*
- 11170 45000000 46000000 47000000 48000000  .*
- 11180 01010000 02010000 03010000 04010000  .*
- 11190 05010000 06010000 07010000 08010000  .*
+ 11[0-9a-f]+ 11000000 12000000 13000000 14000000  .*
+ 11[0-9a-f]+ 15000000 16000000 17000000 18000000  .*
+ 11[0-9a-f]+ 41000000 42000000 43000000 44000000  .*
+ 11[0-9a-f]+ 45000000 46000000 47000000 48000000  .*
+ 11[0-9a-f]+ 01010000 02010000 03010000 04010000  .*
+ 11[0-9a-f]+ 05010000 06010000 07010000 08010000  .*
