@@ -1,3 +1,8 @@
+2005-01-28  Jan Beulich  <jbeulich@novell.com>
+
+	* ld/ia64/tlsbin.[rt]d: Widen expected offset/size ranges.
+	* ld/ia64/tlspic.[rt]d: Likewise.
+
 2005-01-25  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ld-frv/fdpic.exp: Add -mfdpic to ASFLAGS.
